Adjusted the layout for other screen sizes.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,11 @@
 <footer>
-  <div class="mw8 center bt b--moon-gray flex">
-    <div class="w-40 pt4">
+  <div class="mw8 center bt b--moon-gray flex-ns ph4 ph4-m ph0-ns">
+    <div class="w-40-ns pt4 tc tl-ns">
       <a class="link dim" href="https://www.occrp.org/en/about-us">
         <img class="w-80 o-80" src="/static/svg/logo-extended-grayscale.svg" alt="Organized Crime and Corruption Reporting Project" />
       </a>
     </div>
-    <div class="w-60 tr">
+    <div class="w-60-ns tr">
       <p class="silver pv4 lh-copy f6">
         Source available on
         <a class="silver dim" href="{{ site.repository_url }}">Gitlab</a>,
