--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<div class="center mw8 pv2">
+<div class="center mw8 pv2 ph4 ph4-m ph0-ns">
   <a class="link normal gray f3 flex items-center" href="/">
     <img class="h2" src="/static/svg/logo-id-grayscale.svg">
   </a>
