--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,11 +3,11 @@ layout: default
 ---
 
 <div class="bg--pattern bg-black bg-center cover white">
-  <div class="center mw8 pv3">
+  <div class="center mw8 pv3 ph4 ph4-m ph0-ns">
     <h1 class="normal ttu tracked">{{ page.title }}</h1>
   </div>
 </div>
 
-<div class="center mw8 lh-copy pt3 pb5">
+<div class="center mw8 lh-copy pt3 pb5 ph4 ph4-m ph0-ns">
   {{ content }}
 </div>
