--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="{{ site.logo }}">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&subset=cyrillic">
+  <link rel="stylesheet" href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css"/>
   <link rel="stylesheet" href="/static/id.css"/>
 
   {% if jekyll.environment == 'production' and site.google_analytics %}
