Post review updates.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="mw8 center bt b--moon-gray flex-ns ph4 ph4-m ph0-ns">
     <div class="w-40-ns pt4 tc tl-ns">
-      <a class="link dim" href="https://www.occrp.org/en/about-us">
+      <a class="link dim" href="https://www.occrp.org/">
         <img class="w-80 o-80" src="/static/svg/logo-extended-grayscale.svg" alt="Organized Crime and Corruption Reporting Project" />
       </a>
     </div>
