Updated repo links.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,8 +7,8 @@
     </div>
     <div class="w-60-ns tr">
       <p class="silver pv4 lh-copy f6">
-        Source available on
-        <a class="silver dim" href="{{ site.repository_url }}">Gitlab</a>,
+        Content
+        <a class="silver dim" href="{{ site.repository_url }}">is open source</a>,
         background photo by
         <a class="silver dim" href="https://unsplash.com/photos/WqPAETBU2G8">
           Sharon McCutcheon</a>.
