--- a/_layouts/tickets.html
+++ b/_layouts/tickets.html
@@ -13,6 +13,7 @@
           return;
         }
         var div = document.createElement('div');
+        div.style = 'font-size: 0';
         div.innerHTML = ajax.responseText;
         document.body.insertBefore(div, document.body.childNodes[0]);
       };
