--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,4 +14,8 @@
   {% if jekyll.environment == 'production' and site.google_analytics %}
     {% include google-analytics.html %}
   {% endif %}
+
+  {% if jekyll.environment == 'production' and site.matomo_analytics %}
+    {% include matomo-analytics.html %}
+  {% endif %}
 </head>
